# tanCloud_test

./: README.md
client/: CMakeLists.txt  clientwindow.cpp  clientwindow.h  clientwindow.ui  constant.h  datatransfer.cpp  datatransfer.h  images.qrc  login.cpp  login.h  login.ui  main.cpp  mydatamodel.cpp  mydatamodel.h  myfile.cpp  myfile.h  myfile.ui  myspace.cpp  myspace.h  myspace.ui  mytcpclient.cpp  mytcpclient.h  tableviewheader.cpp  tableviewheader.h
server/: CMakeLists.txt  constant.cpp  constant.h  dbhandle.cpp  dbhandle.h  main.cpp  mytcpserver.cpp  mytcpserver.h  mytcpsocketthread.cpp  mytcpsocketthread.h  serverwindow.cpp  serverwindow.h  serverwindow.ui
